--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,5 @@
 
+
 * {
   margin: 0;
   padding: 0;
@@ -178,8 +179,7 @@ a {
 
 .funding-img-cont {
   gap: 25px;
-  margin-left: 50px;
-  margin-right: 50px;
+  margin: 0 50px 0 10px !important;
 }
 
 #one-img {
@@ -207,7 +207,7 @@ a {
   padding-left: 10px;
   position: relative;
   top: 90px;
-  width: 100%;
+  width: 96vw !important;
 }
 
 .right-art {
@@ -360,7 +360,7 @@ a {
 
 .cosmic-op, .hours-3 {
   font-size: 12px;
-  color: #dad2d2;
+  color: #9b9595;
 }
 
 .left-art a {
@@ -385,7 +385,7 @@ a {
 }
 
 .eight-grids {
-    width: 100%;
+    width: 90vw !important;
 }
 
 .info h4 {
@@ -460,7 +460,7 @@ a {
   flex-direction: row;
   justify-content: space-between;
   padding-bottom: 20px;
-  width: 95%;
+  width: 100vw !important;
 }
 
 .funding-nav ul {
@@ -1031,6 +1031,10 @@ a {
   top: 160px;
 }
 
+.reddit-div h4 {
+  width: 300px;
+}
+
 .fb-class {
   background-image: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2020/05/Facebook-Discover-796x419.jpg");
   background-size: cover;
@@ -1145,6 +1149,7 @@ a {
 .funding-img-cont {
   display: grid;
   grid-template-columns: repeat(4, auto);
+  width: 100vw !important;
 }
 
 .funding-img-cont img {
@@ -1186,7 +1191,7 @@ a {
   display: grid;
   grid-template-rows: repeat(9, auto);
   overflow-x: hidden;
-  width: 100%;
+  width: 100vw;
 }
 
 .funding-up,
@@ -1308,7 +1313,7 @@ a {
   .news-latest {
     position: relative;
     bottom: 50px;
-    left: 60px;
+    left: 20px;
   }
 
   .small-header {
@@ -1457,6 +1462,7 @@ a {
 
   .apps {
     margin-top: 100px;
+    
   }
 
   .latest-div1 a {
@@ -1483,7 +1489,11 @@ a {
   }
 
   .info0 {
-    margin-bottom: 30px;
+    margin: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+}
   }
 
   .info0 a {
@@ -1492,6 +1502,7 @@ a {
     font-weight: 700;
     text-decoration: none;
     margin-bottom: 20px;
+    position: relative;
   }
 
   .info0 a:hover {
@@ -1499,6 +1510,8 @@ a {
     font-size: 25px;
     font-weight: 700;
     text-decoration: none;
+    position: relative;
+    right: 50px;
   }
 
   .deals-cont img {
@@ -1512,22 +1525,28 @@ a {
   .top-img-div1 {
     display: grid;
     grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(4,auto);
+    grid-template-rows: repeat(2, auto);
     row-gap: 20px;
-    column-gap: 10px;
+    justify-content: center;
+    position: relative;
+    width: 90vw;
+    left: 40px;
   }
 
   .div-4-eight1 {
     margin: 20px;
   }
+.micro-grav1 {
+  margin-right: 20px;
+}
 
 .micro-grav1 img {
-  width: 310px;
+  width: 230px;
   height: 210px;
 }
 
 .micro-dw {
-width: 310px;
+width: 230px;
 }
 
 .micro-dw h4 {
@@ -1544,15 +1563,19 @@ width: 310px;
 
 .eight-grids1 {
     position: relative;
-    right: 10px;
+    right: 0 !important;
+    width: 100vw;
 }
 
 .info0 b {
-  margin-left: 600px;
+  color: #ff0000;
   font-size: 20px;
+  position: relative;
+  left: 365px;
+  top: 10px;
 }
 
-}
+
 
 @media screen and (min-width: 1008px) and (max-width: 1222px) {
   .white-nav img, #date, .white-nav .button {
@@ -1562,12 +1585,31 @@ width: 310px;
   .svg-inline--fa.fa-search.fa-w-16 {
     left: 200px;
   }
+
 }
 
 @media screen and (min-width: 1223px) {
  .svg-inline--fa.fa-search.fa-w-16 {
    left: 0;
  }
+
+ .info0 b {
+  color: #ff0000;
+  font-size: 20px;
+  position: relative;
+  left: 470px !important;
+  top: 10px;
+}
+
+.micro-grav1 img {
+  width: 290px !important;
+  height: 210px;
+}
+
+.micro-dw {
+width: 290px !important;
+}
+
 }
 
 /* Medium Screen */
@@ -1653,7 +1695,7 @@ width: 310px;
   }
 
 .div-callum {
-   bottom: 30px;
+   bottom: 20px;
    left: 20px;
   }
 
@@ -1663,7 +1705,7 @@ width: 310px;
   }
 
   #stub-para {
-    width: 280px;
+    width: 30vw;
   }
 
   .right-art-top a {
@@ -1681,8 +1723,8 @@ width: 310px;
     font-weight: 500;
     font-size: 22px;
     line-height: 18px;
-    width: 260px;
-    top: 15px;
+    width: 29vw;
+    top: 0;
   }
   
   .eight-grids {
@@ -1719,6 +1761,8 @@ width: 310px;
   font-size: 30px;
   font-weight: 600;
   color: #ff0000;
+  top: 5px;
+  left: 0px;
 }
 
 .news-latest {
@@ -1867,7 +1911,7 @@ width: 310px;
 }
 
 .reddit-div h4, .simpson h4 {
-  width: 460px;
+  width: 400px;
 }
 
 .reddit-div h2, 
@@ -1973,7 +2017,7 @@ width: 310px;
 }
 
 .info0 a {
-  margin-left: 10px;
+  margin-left: 0 !important;
   font-size: 30px;
   color: #ff0000;
 }
@@ -1995,8 +2039,13 @@ width: 310px;
     row-gap: 20px;
   }
 
+  .micro-grav1 {
+    margin-right: 10px;
+  }
+
   .div-4-eight1 {
     margin: 20px;
+    width: 90vw;
   }
 
 .micro-grav1 img {
@@ -2026,8 +2075,17 @@ width: 310px;
 }
 
 .info0 b {
-  margin-left: 600px;
-  font-size: 20px;
+ color: #ff0000;
+ font-size: 20px;
+ position: relative;
+ top: 10px;
+ left: 230px !important;
+}
+
+.info0 {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  justify-content: space-between;
 }
 
 }
@@ -2167,10 +2225,11 @@ width: 310px;
 
   .right-art-top a {
     color: #fff;
+    font-size: 25px;
     left: 20px;
     position: relative;
     text-decoration: none;
-    top: 30px;
+    top: 0;
     z-index: 0;
   }
 
@@ -2201,8 +2260,9 @@ width: 310px;
     position: relative;
     text-decoration: none;
     top: 15px;
-    width: 95%;
+    width: 90vw !important;
     z-index: 0;
+    font-size: 25px;
   }
 
   .left-art {
@@ -2257,8 +2317,9 @@ width: 310px;
     font-size: 25px;
     font-weight: 700;
     text-decoration: none;
-    margin-bottom: 20px;
-    margin-left: 25px;
+    margin:0 0 20px 20px ;
+    top: 15px;
+    left: 15px;
   }
 
   .info a:hover {
@@ -2272,6 +2333,8 @@ width: 310px;
     bottom: 120px;
     margin: 120px 20px 0 0;
     padding: 0 45px 0 5px;
+    width: 80vw !important;
+    font-size: 20px !important;
   }
 
   .div-callum {
@@ -2281,7 +2344,7 @@ width: 310px;
   }
 
   #stub-para {
-    width: 550px;
+    width: 90vw !important;
   }
 
   .left-art a {
@@ -2367,8 +2430,8 @@ width: 310px;
   }
 
 .top-img-div {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: grid !important;
+  grid-template-columns: 1fr !important;
 }
 
 .top-img-div img {
@@ -2378,17 +2441,18 @@ width: 310px;
 
 .micro-grav {
   display: grid;
-  flex-direction: row;
   grid-template-columns: repeat(2,auto);
   gap: 20px
 }
 
 .micro-grav2 {
-  width: 500px;
+  width: 70vw;
+
 }
 
 .micro-grav2 h4 {
   font-size: 12px;
+  width: 50vw;
 }
 
 .cosmic-op, .hours-3 {
@@ -2471,9 +2535,8 @@ width: 310px;
   }
 
   .eight-grids1 {
-    margin: -150px 0 0 0;
+    margin: -150px 0 0 20px;
     z-index: 0;
-    width: 80%;
   }
 
    
@@ -2491,7 +2554,7 @@ width: 310px;
     color: #f42;
     font-size: 28px;
     font-weight: 700;
-    margin-left: 15px;
+    margin-left: 0 !important;
   }
 
   .red {
@@ -2576,7 +2639,13 @@ width: 310px;
     font-size: 14px;
   }
 
-  .funding-list {
+  .borda {
+    border-left-width: 0px !important;
+    border-right-width: 0px !important;
+    padding-left: 0px !important;
+}
+
+ .funding-list {
     margin-left: 0;
   }
 
@@ -2626,35 +2695,56 @@ width: 310px;
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 20px;
-    margin: 10px 0 10px 0;
+    margin-left: 50px;
   }
 
   .div-4-eight1 {
     margin: 50px 0 020px;
-  }
+   }
 
-  .eight-grids1 {
-    margin-left: 20px;
-  }
-  .info1 {
+ .info1 {
     margin: 20px 20px 20px 0;
     color: #f42;
   }
 
   .micro-grav1 img {
    width: 100px;
+   height: 120px;
   }
 
   .micro-grav1 h4 {
     font-size: 14px;
     color: #141414;
     margin-bottom: 10px;
+    width: 50vw;
+  }
+
+  .info0 a {
+    position: relative;
+    right: 5px;
+    font-size: 17px;
+    top: 10px;
   }
 
   .info0 b {
-    position: relative;
-    left: 270px;
-    font-size: 15px;
+    font-size: 17px;
+    margin-right: 15px;
+  }
+
+  .micro-dw {
+    width: 90vw;
+  }
+
+  .top-img-div1 {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .info0 {
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    justify-content: space-between;
+    width: 40vw;
   }
 
 .micro-grav1 span {
@@ -2663,14 +2753,6 @@ color: #afaaaa;
 
   .info1 a {
     color: #f42;
-  }
-
-  .info0 a {
-    color: #f42;
-    font-size: 25px;
-    font-weight: 700;
-    text-decoration: none;
-    margin-bottom: 20px;
   }
 
   .info0 a:hover {
@@ -2745,6 +2827,7 @@ color: #afaaaa;
   #apps-h5 h4 {
     top: 30px;
     font-size: 1em;
+    width: 90vw !important;
   }
 
   #one-img {
@@ -2761,11 +2844,13 @@ color: #afaaaa;
     display: grid;
     grid-template-columns: repeat(5, auto);
   }
-
+ 
   .icon-cont li {
     padding: 7px;
   }
 }
+
+
 
 @media screen and (min-width: 640px) and (max-width: 938px) {
   .top-header {
